# nedb

./: .gitmodules  README.md  codemagic.yaml  ideas.md  package.json  pyproject.toml
.github/workflows/: release-distros.yml  release.yml
bench/: bench_redis.py
client/node/: package.json
client/python/: pyproject.toml
examples/: demo.py
python/nedb/: __init__.py  autoindex.py  client.py  concurrent.py  engine.py  log.py  redis_compat.py  server.py  sql.py  store.py
rust/: Cargo.toml
rust/crates/nedb-core/: Cargo.toml
rust/crates/nedb-core/src/: index.rs  lib.rs  log.rs  nql.rs  relations.rs
rust/crates/nedb-py/: Cargo.toml  pyproject.toml
rust/crates/nedb-py/src/: lib.rs
rust/nedb-v2/: Cargo.toml
rust/nedb-v2/src/: db.rs  lib.rs  server.rs
test/: smoke.mjs
tests/: test_adapters.py  test_client.py  test_daemon_ttl.py  test_native.py  test_nedb.py  test_the_will.py  test_tx.py
