[package]
name        = "nedb-core-v2"
version     = "2.0.0"
edition     = "2021"
description = "NEDB v2 — content-addressed DAG storage engine"
license     = "BUSL-1.1"
repository  = "https://github.com/Eth-Interchained/nedb"

[dependencies]
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
blake2       = "0.10"
aes-gcm      = "0.10"
sha2         = "0.10"
hex          = "0.4"
rayon        = "1"
dashmap      = "5"
thiserror    = "1"
anyhow       = "1"
parking_lot  = "1"

[dev-dependencies]
tempfile = "3"
